--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 0.10
+  - 0.12
 before_script:
   - npm install -g grunt-cli
-  - mysql -e create database nayar_test
+  - mysql -e 'create database nayar_test;' -u root
