mysql handling separated from layar api logic, basis for dashboard api implemented

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "keywords": [],
   "dependencies": {
     "geolib": "^2.0.17",
+    "jsonfile": "^2.2.1",
     "lodash": "^3.10.0",
     "mysql": "^2.8.0"
   }
