modular new poi forms that optionally allow objects, transforms, animations and actions to be added at add time

--- a/db/config.json
+++ b/db/config.json
@@ -3,7 +3,7 @@
         "connection": {
             "host": "localhost",
             "user": "root",
-            "password": "",
+            "password": "Alt0264Uml4ut",
             "database": "nayar_test"
         },
         "tables": {
