added opacity animation option in accordance with Layar API v8.4

--- a/db/config.json
+++ b/db/config.json
@@ -150,7 +150,7 @@
                     "type": {
                         "type": "enum",
                         "length": null,
-                        "value": "'scale','translate','rotate'",
+                        "value": "'scale','translate','rotate','opacity'",
                         "options": "NOT NULL"
                     },
                     "length": {
